Add a description of ENTRYPOINT

--- a/docker/ros2/Dockerfile
+++ b/docker/ros2/Dockerfile
@@ -42,4 +42,8 @@ RUN echo "source /opt/ros/${ROS_DISTRO}/setup.bash" >> ~/.bashrc
 RUN echo "source /usr/share/colcon_cd/function/colcon_cd.sh" >> ~/.bashrc \
     && echo "export _colcon_cd_root=${ros_ws}" >> ~/.bashrc
 
+# This entrypoint is from base image.
+# See https://github.com/osrf/docker_images/blob/master/ros/galactic/ubuntu/focal/ros-core/ros_entrypoint.sh
+ENTRYPOINT ["/ros_entrypoint.sh"]
+
 CMD ["sleep", "infinity"]
